--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "kafkajs": "^1.12.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "uuid": "^7.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.13.2",
@@ -34,6 +35,7 @@
     "@nestjs/testing": "^6.10.14",
     "@types/express": "^4.17.2",
     "@types/jest": "25.1.1",
+    "@types/kafkajs": "^1.9.0",
     "@types/node": "^13.1.6",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
